--- a/public/spotify-auth.html
+++ b/public/spotify-auth.html
@@ -78,7 +78,7 @@
     </div>
 
     <script>
-        const REDIRECT_URI = 'http://127.0.0.1:5173/spotify-auth.html';
+        const REDIRECT_URI = 'https://ourstoriesalbum.vercel.app/spotify-auth.html';
         const SCOPES = 'playlist-modify-public playlist-modify-private';
 
         function authorize() {
