--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>song-carousel-gift</title>
+    <title>WorkingNPMVersion
+      
+    </title>
   </head>
   <body>
     <div id="root"></div>
